--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
+<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center relative">
 
 	<!-- Logo -->
 	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
@@ -8,6 +8,8 @@
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
 		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
+
+		<li><a href="/hundred-and-one" class="pa3 no-underline db">100 in 1001</a></li>
 
 		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
 
