--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -9,7 +9,7 @@
 	<ul class="flex b grey-3">
 		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
 
-		<li><a href="/hundred-and-one" class="pa3 no-underline db">100 in 1001</a></li>
+		<li><a href="/post/one-hundred-and-one/" class="pa3 no-underline db">100 in 1001</a></li>
 
 		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
 
