--- a/site/layouts/partials/instagram-image-grid.html
+++ b/site/layouts/partials/instagram-image-grid.html
@@ -1,4 +1,3 @@
-<div>HELLO OUT THERE!!!</div>
 <div id="instagram-area"></div>
 
 <script>
@@ -13,17 +12,16 @@
 		return xhr;
 	}
 
-	// getAjax('http://localhost:9009/?url=https://my-little-corner-of-the-world.netlify.com/.netlify/functions/scrape-instagram', function (data) {
+	// getAjax('http://localhost:9010/?url=https://my-little-corner-of-the-world.netlify.com/.netlify/functions/scrape-instagram', function (data) {
 	getAjax('https://my-little-corner-of-the-world.netlify.com/.netlify/functions/scrape-instagram', function (data) {
 		json = JSON.parse(data)
 		var div = document.getElementById("instagram-area");
 		for (i = 0; i < 5; i++) {
-			var node = json.entry_data.ProfilePage[0].graphql.user.edge_owner_to_timeline_media.edges[i].node;
 			var a = document.createElement("a");
-			a.href = "https://www.instagram.com/p/" + node.shortcode + "/?taken-by=mollyrose30"
+			a.href = "https://www.instagram.com/p/" + json[i].shortcode + "/?taken-by=mollyrose30"
 			var img = document.createElement("img");
-			img.src = node.thumbnail_src;
-			var alt = node.edge_media_to_caption.edges[0].node.text
+			img.src = json[i].thumbnail_url;
+			var alt = json[i].description
 			img.alt = alt
 			img.title = alt
 			a.appendChild(img)
