Create right-panel blurb

--- a/site/layouts/partials/instagram-image-grid.html
+++ b/site/layouts/partials/instagram-image-grid.html
@@ -23,7 +23,7 @@
 		var targetDiv = document.getElementById("instagram-area");
 		for (i = 0; i < 6; i++) {
 		    var div = document.createElement("div")
-            div.className = "ph1-ns w-40-ns flex";
+            div.className = "ph1-ns w-50-ns flex center";
 			var a = document.createElement("a");
 			a.href = "https://www.instagram.com/p/" + json[i].shortcode + "/?taken-by=mollyrose30"
 			var img = document.createElement("img");
