--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,6 +1,7 @@
-<div class="bg-grey-1 pv4">
-  <div class="flex-l mhn1-l ph3 center mw7">
-    <h2 class="f2 b lh-title mb2 w-40-l">{{.heading}}</h2>
-    <p class="w-60-l mb0">{{.text}}</p>
-  </div>
+<div class="bg-off-white pv4">
+  <div class="ph3 center">
+    <div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
+      <h2 class="f2 b mb2 center">{{.heading}}</h2>
+      <p class="w-100-l mb0 center">{{.text}}</p>
+    </div>
 </div>
