Fix up right-hand blurb

--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,7 +1,9 @@
-<div class="bg-off-white pv4">
-  <div class="ph3 center">
-    <div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
-      <h2 class="f2 b mb2 center">{{.heading}}</h2>
-      <p class="w-100-l mb0 center">{{.text}}</p>
+    <div class="ph3 center">
+        <div class="w-100 mhn1-ns mb3">
+            <div class="w-100 ph1-ns center">
+                <img src="{{ .image }}">
+            </div>
+            <h2 class="f2 b mb2 center">{{.heading}}</h2>
+            <p class="w-100-l mb0 center">{{.text}}</p>
+        </div>
     </div>
-</div>
