--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,8 +9,10 @@
                 {{ partial "blog" . }}
             </div>
             <div class="ph4-ns w-40-ns flex">
-                {{ partial "short-text" .Params.blurb}}
-                {{ partial "instagram-image-grid" }}
+                <div class="bg-off-white pv4">
+                    {{ partial "short-text" .Params.blurb}}
+                    {{ partial "instagram-image-grid" }}
+                </div>
             </div>
         </div>
     </div>
