Add conditional home link

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,12 +1,18 @@
 <nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center relative">
 
-	<!-- Logo -->
-	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>
-	</a>
+    <!-- Logo -->
+    <a href="/" class="pa3 db mr4 h-100 w6 flex-none no-underline">
+        {{ if eq .Type "post"  }}
+            <div><ul class="b grey-3"><li>My Little Corner of the World</li></ul></div>
+        {{ end }}
+    </a>
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
+		{{ if eq .Type "post"  }}
+            <li><a href="/" class="pa3 no-underline db">Home</a></li>
+		{{ end }}
+
 		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
 
 		<li><a href="/post/one-hundred-and-one/" class="pa3 no-underline db">100 in 1001</a></li>
