--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -5,6 +5,7 @@
   <div class="mw6 center ph3 pv4">
     <h1 class="f2 lh-title b mb3">{{.Title}}</h1>
     <div class="flex justify-between grey-3">
+      <p>Molly Burns</p>
       <p>{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
       <p>Read in {{ .ReadingTime }} minutes</p>
     </div>
@@ -12,6 +13,9 @@
       <p>{{ .Description }}</p>
       {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" />{{ end }}
       {{ .Content }}
+    </div>
+    <div class="tc">
+      <a href="/" class="btn raise">Read more posts</a>
     </div>
   </div>
 {{ end }}
