--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,4 +1,4 @@
-    <div class="ph3 center">
+    <div class="ph3 pb4 center">
         <div class="w-100 mhn1-ns mb3">
             <div class="w-100 ph1-ns center">
                 <img src="{{ .image }}">
