--- a/site/layouts/partials/social-icon.html
+++ b/site/layouts/partials/social-icon.html
@@ -1,7 +1,6 @@
-<li class="dib ph2 raise">
-  <a href="{{.link}}" class="link bg-white black db relative br-100 pa2">
-    <svg width="16px" height="16px" class="db">
-      <use xlink:href="#{{.svg}}"></use>
-    </svg>
-  </a>
-</li>
+<a href="{{.link}}" class="link mb4 bg-white black db br-100 center">
+  <svg width="32px" height="32px" class="db">
+    <use xlink:href="#{{.svg}}"></use>
+  </svg>
+  {{.text}}
+</a>
