Add nav padding

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 <nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center relative">
 
 	<!-- Primary Nav -->
-	<ul class="flex b grey-3" style="margin-left: auto">
+	<ul class="flex b grey-3 pr6" style="margin-left: auto">
 		{{ if eq .Type "post"  }}
             <li><a href="/" class="pa3 no-underline db">My Little Corner of the World  |  Home</a></li>
         {{ else }}
