Fix typo in css class

--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -3,7 +3,7 @@
 {{ partial "nav" . }}
 
 <div class="mw7 center">
-  <h1 class="f2 f1-l b di lh-title ml3 pr2 pl2t mb3 white mw6 bg-primary">
+  <h1 class="f2 f1-l b di lh-title ml3 pr2 pl2 mb3 white mw6 bg-primary">
     All Posts
   </h1>
   <ul class="flex-ns flex-wrap mhn1-ns pa3">
