Fix instagram url

--- a/site/layouts/partials/instagram-image-grid.html
+++ b/site/layouts/partials/instagram-image-grid.html
@@ -17,7 +17,8 @@
 	}
 
 	// getAjax('http://localhost:9010/?url=https://my-little-corner-of-the-world.netlify.com/.netlify/functions/scrape-instagram', function (data) {
-	getAjax('https://my-little-corner-of-the-world.netlify.com/.netlify/functions/scrape-instagram', function (data) {
+    // getAjax('https://my-little-corner-of-the-world.netlify.com/.netlify/functions/scrape-instagram', function (data) {
+	getAjax('https://mylittlecornerofthe.world/.netlify/functions/scrape-instagram', function (data) {
 		json = JSON.parse(data);
 		var targetDiv = document.getElementById("instagram-area");
 		for (i = 0; i < 6; i++) {
