--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -5,6 +5,8 @@
 		{{ if eq .Type "post"  }}
             <li><a href="/" class="pa3 no-underline db">My Little Corner of the World  |  Home</a></li>
         {{ else }}
+            <li><a href="/post/bookshelf/" class="pa3 no-underline db">Bookshelf</a></li>
+
             <li><a href="/post/one-hundred-and-one/" class="pa3 no-underline db">101 in 1001</a></li>
 
             <li><a href="/post" class="pa3 no-underline db">All Posts</a></li>
